# csci580_project

./: CMakeLists.txt  README.md  scene1.fs  scene2.fs  scene_vert.vs  viewspace.fs  viewspace.vs  worldspace.fs
include/: camera.hpp  shader.hpp
include/glad/: gl.h
src/: main.cpp
